--- a/root-finding.ipynb
+++ b/root-finding.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.6.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "venv",
-   "display_name": "venv"
+   "name": "python_defaultSpec_1598698857635",
+   "display_name": "Python 3.6.9 64-bit ('p3venv': venv)"
   }
  },
  "nbformat": 4,
@@ -34,6 +34,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Bisection method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bisection(f, a, b, tol):\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    f: function\n",
+    "        function 'f' to find root of\n",
+    "    a: float\n",
+    "    b: float\n",
+    "        a and b such that f(a)*f(b) < 0\n",
+    "    tol: float\n",
+    "        tolerance\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    p = (a + b)/2.0\n",
+    "    while b - p > tol:\n",
+    "        if f(a)*f(p) < 0:\n",
+    "            b = p\n",
+    "        else:\n",
+    "            a = p\n",
+    "        p = (a + b)/2.0\n",
+    "    \n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Using Bisection method\n",
+    "\n",
+    "from math import cos, sin, inf\n",
+    "\n",
+    "f = lambda x: sin(x) + 3*cos(x) - 2\n",
+    "a = 1\n",
+    "b = 2\n",
+    "tol = 1e-6\n",
+    "\n",
+    "bisection(f, a, b, tol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fixed Point method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fixed_point(g, x, tol, n):\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    g: function\n",
+    "        function 'g' such that x = g(x)\n",
+    "    x: float\n",
+    "        Initial guess of root\n",
+    "    tol: float\n",
+    "        tolerance\n",
+    "    n: int\n",
+    "        maximum number of iterations\n",
+    "    \"\"\"\n",
+    "    next_sequence_item = lambda x: g(x)\n",
+    "\n",
+    "    x_old = x\n",
+    "    x = next_sequence_item(x)\n",
+    "    n = n - 1\n",
+    "    while abs(x - x_old) > tol and n > 0:\n",
+    "        x_old = x\n",
+    "        x = next_sequence_item(x)\n",
+    "        n = n - 1\n",
+    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "## Using Fixed Point method\n",
+    "\n",
+    "from math import cos, sin, acos, inf\n",
+    "\n",
+    "f = lambda x: sin(x) + 3*cos(x) - 2\n",
+    "g = lambda x: acos((2 - sin(x))/3)\n",
+    "x = 1.2\n",
+    "tol = 1e-6\n",
+    "n = inf\n",
+    "\n",
+    "fixed_point(g, x, tol, n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Newton's method"
    ]
   },
@@ -43,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def newton(f, f_der, x, tol):\n",
+    "def newton(f, f_der, x, tol, n):\n",
     "    \"\"\"\n",
     "    Arguments\n",
     "    ---------\n",
@@ -55,11 +170,18 @@
     "        Initial guess of root\n",
     "    tol: float \n",
     "        tolerance\n",
+    "    n: int\n",
+    "        maximum number of iterations\n",
     "    \"\"\"\n",
     "    next_sequence_item = lambda x: x - f(x)/f_der(x)\n",
-    "\n",
-    "    while abs(f(x)) > tol:\n",
+    "    \n",
+    "    x_old = x\n",
+    "    x = next_sequence_item(x)\n",
+    "    n = n - 1\n",
+    "    while abs(x - x_old) > tol and n > 0:\n",
+    "        x_old = x\n",
     "        x = next_sequence_item(x)\n",
+    "        n = n - 1\n",
     "        # print(x, f(x))\n",
     "\n",
     "    return x"
@@ -73,19 +195,22 @@
    "source": [
     "## Using newton's method\n",
     "\n",
-    "from math import cos, sin\n",
+    "from math import cos, sin, inf\n",
     "\n",
     "f = lambda x: sin(x) + 3*cos(x) - 2\n",
     "f_der = lambda x: cos(x) - 3*sin(x)\n",
     "x = 1\n",
     "tol = 1e-6\n",
+    "n = inf\n",
     "\n",
-    "newton(f, f_der, x, tol)"
+    "newton(f, f_der, x, tol, n)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Secant Method"
    ]
