Add modified newton's method
This method is for finding a root with multiplicity m > 1.

Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/root-finding.ipynb
+++ b/root-finding.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9-final"
+   "version": "3.8.5-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598698857635",
-   "display_name": "Python 3.6.9 64-bit ('p3venv': venv)"
+   "name": "python3",
+   "display_name": "Python 3"
   }
  },
  "nbformat": 4,
@@ -27,7 +27,17 @@
    "source": [
     "# Root finding problem\n",
     "\n",
-    "Finding root or solution for an equation of the form `f(x) = 0`"
+    "Finding root or solution for an equation of the form `f(x) = 0`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding simple roots\n",
+    "\n",
+    "We will first look at finding \"simple\" roots, i.e. roots with multiplicuty 1,\n",
+    "of the function."
    ]
   },
   {
@@ -178,11 +188,12 @@
     "    x_old = x\n",
     "    x = next_sequence_item(x)\n",
     "    n = n - 1\n",
+    "    print(x, f(x))\n",
     "    while abs(x - x_old) > tol and n > 0:\n",
     "        x_old = x\n",
     "        x = next_sequence_item(x)\n",
     "        n = n - 1\n",
-    "        # print(x, f(x))\n",
+    "        print(x, f(x))\n",
     "\n",
     "    return x"
    ]
@@ -320,6 +331,89 @@
     "\n",
     "false_position(f, x0, x1, tol)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding non-simple roots\n",
+    "\n",
+    "Finding roots with multiplicity `m > 1`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modified Netwon's method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modified_newton(f, f_der, f_der2, x, tol, n):\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    f: function\n",
+    "        function `f` to find root of\n",
+    "    f_der: function\n",
+    "        Derivative of `f`\n",
+    "    f_der2: function\n",
+    "        Derivative of `f_der`\n",
+    "    x: float\n",
+    "        Initial guess of root\n",
+    "    tol: float \n",
+    "        tolerance\n",
+    "    n: int\n",
+    "        maximum number of iterations\n",
+    "    \"\"\"\n",
+    "    numerator = lambda x: f(x)*f_der(x)\n",
+    "    denominator = lambda x: f_der(x)**2 - f(x)*f_der2(x)\n",
+    "    next_sequence_item = lambda x: x - numerator(x)/denominator(x)\n",
+    "    \n",
+    "    x_old = x\n",
+    "    x = next_sequence_item(x)\n",
+    "    n = n - 1\n",
+    "    print(x, f(x))\n",
+    "    while abs(x - x_old) > tol and n > 0:\n",
+    "        x_old = x\n",
+    "        x = next_sequence_item(x)\n",
+    "        n = n - 1\n",
+    "        print(x, f(x))\n",
+    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "## Using modifed newton's method\n",
+    "\n",
+    "f = lambda x: x**3 - 7*x**2 + 11*x - 5\n",
+    "f_der = lambda x: 3*x**2 - 14*x + 11\n",
+    "f_der2 = lambda x: 6*x - 14\n",
+    "x = 0\n",
+    "tol = 1e-6\n",
+    "n = inf\n",
+    "\n",
+    "modified_newton(f, f_der, f_der2, x, tol, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
