--- a/root-finding.ipynb
+++ b/root-finding.ipynb
@@ -378,12 +378,12 @@
     "    x_old = x\n",
     "    x = next_sequence_item(x)\n",
     "    n = n - 1\n",
-    "    print(x, f(x))\n",
+    "    # print(x, f(x))\n",
     "    while abs(x - x_old) > tol and n > 0:\n",
     "        x_old = x\n",
     "        x = next_sequence_item(x)\n",
     "        n = n - 1\n",
-    "        print(x, f(x))\n",
+    "        # print(x, f(x))\n",
     "\n",
     "    return x"
    ]
@@ -398,6 +398,8 @@
    "source": [
     "## Using modifed newton's method\n",
     "\n",
+    "from math import inf\n",
+    "\n",
     "f = lambda x: x**3 - 7*x**2 + 11*x - 5\n",
     "f_der = lambda x: 3*x**2 - 14*x + 11\n",
     "f_der2 = lambda x: 6*x - 14\n",
@@ -409,11 +411,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Muller's method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from cmath import sqrt\n",
+    "\n",
+    "def muller(f, x0, x1, x2, tol, n):\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    f: function\n",
+    "        function `f` to find root of\n",
+    "    x0, x1, x2: complex/float\n",
+    "        Initial 3 guesses of root\n",
+    "    tol: float \n",
+    "        tolerance\n",
+    "    n: int\n",
+    "        maximum number of iterations\n",
+    "    \"\"\"\n",
+    "    # print(x0, x1, x2)\n",
+    "    while abs(x2 - x1) > tol and n > 0:\n",
+    "        h1 = x1 - x0\n",
+    "        h2 = x2 - x1\n",
+    "        δ1 = (f(x1)-f(x0))/h1\n",
+    "        δ2 = (f(x2)-f(x1))/h2\n",
+    "\n",
+    "        # Coefficients of parabola (as quadratic eqn)\n",
+    "        a = (δ2 - δ1)/(h2 + h1)\n",
+    "        b = δ2 + h2*a\n",
+    "        c = f(x2)\n",
+    "\n",
+    "        D = sqrt(b**2 - 4*a*c)\n",
+    "        E = b+D if abs(b-D) < abs(b+D) else b-D\n",
+    "        \n",
+    "        # Root approximation\n",
+    "        x = x2 - 2*c/E\n",
+    "\n",
+    "        # Update sequence variables\n",
+    "        x0 = x1\n",
+    "        x1 = x2\n",
+    "        x2 = x\n",
+    "        # print(x0, x1, x2)\n",
+    "    \n",
+    "    return x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "## Using muller's method\n",
+    "\n",
+    "from math import inf\n",
+    "\n",
+    "f = lambda x: x**3 - 5*x - 1\n",
+    "x0 = 0\n",
+    "x1 = 0.5\n",
+    "x2 = 1\n",
+    "tol = 1e-6\n",
+    "n = inf\n",
+    "\n",
+    "muller(f, x0, x1, x2, tol, n)"
+   ]
   }
  ]
 }
