Terminate bisection method if exact root is found
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/root-finding.ipynb
+++ b/root-finding.ipynb
@@ -68,7 +68,9 @@
     "    \n",
     "    p = (a + b)/2.0\n",
     "    while b - p > tol:\n",
-    "        if f(a)*f(p) < 0:\n",
+    "        if f(p) == 0:\n",
+    "            break\n",
+    "        elif f(a)*f(p) < 0:\n",
     "            b = p\n",
     "        else:\n",
     "            a = p\n",
