Add number of iterations for secant method
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/root-finding.ipynb
+++ b/root-finding.ipynb
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def secant(f, x0, x1, tol):\n",
+    "def secant(f, x0, x1, tol, n):\n",
     "    \"\"\"\n",
     "    Arguments\n",
     "    ---------\n",
@@ -242,14 +242,19 @@
     "        Initial two guess of root\n",
     "    tol: float \n",
     "        tolerance\n",
+    "    n: int\n",
+    "    maximum number of iterations\n",
     "    \"\"\"\n",
     "    next_sequence_item = lambda x0, x1: x1 - f(x1)*(x1-x0)/(f(x1)-f(x0))\n",
     "\n",
-    "    while abs(f(x1)) > tol:\n",
-    "        x2 = next_sequence_item(x0, x1)\n",
+    "    x2 = next_sequence_item(x0, x1)\n",
+    "    n = n - 1\n",
+    "    while abs(x2 - x1) > tol and n > 0:\n",
     "        x0 = x1\n",
     "        x1 = x2\n",
-    "        # print(x1, f(x1))\n",
+    "        x2 = next_sequence_item(x0, x1)\n",
+    "        n = n - 1\n",
+    "        # print(x)\n",
     "\n",
     "    return x1"
    ]
@@ -262,12 +267,15 @@
    "source": [
     "## Using secant method\n",
     "\n",
+    "from math import sin, cos, inf\n",
+    "\n",
     "f = lambda x: sin(x) + 3*cos(x) - 2\n",
     "x0 = 0\n",
     "x1 = 1.5\n",
     "tol = 1e-6\n",
+    "n = inf\n",
     "\n",
-    "secant(f, x0, x1, tol)"
+    "secant(f, x0, x1, tol, n)"
    ]
   },
   {
