Add number of iterations for false position
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/root-finding.ipynb
+++ b/root-finding.ipynb
@@ -243,7 +243,7 @@
     "    tol: float \n",
     "        tolerance\n",
     "    n: int\n",
-    "    maximum number of iterations\n",
+    "        maximum number of iterations\n",
     "    \"\"\"\n",
     "    next_sequence_item = lambda x0, x1: x1 - f(x1)*(x1-x0)/(f(x1)-f(x0))\n",
     "\n",
@@ -291,7 +291,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def false_position(f, x0, x1, tol):\n",
+    "from math import inf\n",
+    "\n",
+    "def false_position(f, x0, x1, tol, n):\n",
     "    \"\"\"\n",
     "    Arguments\n",
     "    ---------\n",
@@ -301,13 +303,15 @@
     "        Initial two guess of root\n",
     "    tol: float \n",
     "        tolerance\n",
+    "    n: int\n",
+    "        maximum number of iterations\n",
     "    \"\"\"\n",
     "    next_sequence_item = lambda x0, x1: x1 - f(x1)*(x1-x0)/(f(x1)-f(x0))\n",
     "    x2 = next_sequence_item(x0, x1)\n",
+    "    n = n - 1\n",
     "    # print(x2, f(x2))\n",
     "\n",
-    "    while abs(f(x1)) > tol:\n",
-    "        x3 = 0\n",
+    "    while abs(x2 - x1) > tol and n > 0:\n",
     "        if f(x1)*f(x2) < 0:\n",
     "            x3 = next_sequence_item(x1, x2)\n",
     "            x0 = x1\n",
@@ -317,7 +321,8 @@
     "            x3 = next_sequence_item(x0, x2)\n",
     "            x1 = x2\n",
     "            x2 = x3\n",
-    "        # print(x3, f(x3))\n",
+    "        n = n - 1\n",
+    "        # print(x2, f(x2))\n",
     "    \n",
     "    return x2"
    ]
@@ -325,19 +330,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "## Using false position\n",
     "\n",
-    "from math import sin, cos\n",
+    "from math import sin, cos, inf\n",
     "\n",
     "f = lambda x: sin(x) + 3*cos(x) - 2\n",
     "x0 = 0\n",
     "x1 = 1.5\n",
     "tol = 1e-6\n",
+    "n = inf\n",
     "\n",
-    "false_position(f, x0, x1, tol)"
+    "false_position(f, x0, x1, tol, n)"
    ]
   },
   {
