--- a/system-of-linear-equations.ipynb
+++ b/system-of-linear-equations.ipynb
@@ -267,11 +267,87 @@
    ]
   },
   {
+   "source": [
+    "# System of non-linear equations\n",
+    "\n",
+    "Atleast one equation is non-linear."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Newton-Raphson method"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def newton_raphson(F, J, X, tol, n):\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    F: function\n",
+    "        Function returning vector of functions\n",
+    "    J: function returning a matrix\n",
+    "        Function returning Jacobian matrix\n",
+    "    X: np.array\n",
+    "        Initial approximation vector\n",
+    "    tol: float\n",
+    "        tolerance\n",
+    "    n: int\n",
+    "        maximum number of iterations\n",
+    "    \"\"\"\n",
+    "    E = np.array(F(X).size) # Error vector\n",
+    "\n",
+    "    iterations = 0\n",
+    "    while np.max(abs(E)) > tol and iterations < n:\n",
+    "        E = -np.dot(np.linalg.inv(J(X)), F(X))\n",
+    "        X = X + E\n",
+    "        iterations += 1\n",
+    "\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from math import inf\n",
+    "\n",
+    "f = lambda X: X[0]**2 + X[0]*X[1] + X[1]**2 - 7\n",
+    "g = lambda X: X[0]**3 + X[1]**3 - 9\n",
+    "\n",
+    "F = lambda X: np.array([f(X), g(X)])\n",
+    "\n",
+    "fx = lambda X: 2*X[0] + X[1]\n",
+    "fy = lambda X: X[0] + 2*X[1]\n",
+    "gx = lambda X: 3*X[0]**2\n",
+    "gy = lambda X: 3*X[1]**2\n",
+    "\n",
+    "J = lambda X: np.array([\n",
+    "    [fx(X), fy(X)],\n",
+    "    [gx(X), gy(X)]\n",
+    "])\n",
+    "\n",
+    "X = np.array([1.5, 0.5])\n",
+    "tol = 1e-6\n",
+    "n = inf\n",
+    "\n",
+    "newton_raphson(F, J, X, tol, n)"
+   ]
   }
  ]
 }
