Update input format in Newton Raphson
For math functions, parameters x, y are used over X which leads to ugly
terms X[0], X[1].

Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/system-of-equations.ipynb
+++ b/system-of-equations.ipynb
@@ -305,7 +305,7 @@
     "    n: int\n",
     "        maximum number of iterations\n",
     "    \"\"\"\n",
-    "    E = np.array(F(X).size) # Error vector\n",
+    "    E = np.array(np.inf) # Error vector\n",
     "\n",
     "    iterations = 0\n",
     "    while np.max(abs(E)) > tol and iterations < n:\n",
@@ -324,6 +324,42 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "from math import inf\n",
+    "\n",
+    "f = lambda x, y: x**2 + x*y + y**2 - 7\n",
+    "g = lambda x, y: x**3 + y**3 - 9\n",
+    "\n",
+    "F = lambda X: np.array([f(*X), g(*X)])\n",
+    "\n",
+    "fx = lambda x, y: 2*x + y\n",
+    "fy = lambda x, y: x + 2*y\n",
+    "gx = lambda x, y: 3*x**2\n",
+    "gy = lambda x, y: 3*y**2\n",
+    "\n",
+    "J = lambda X: np.array([\n",
+    "    [fx(*X), fy(*X)],\n",
+    "    [gx(*X), gy(*X)]\n",
+    "])\n",
+    "\n",
+    "X = np.array([1.5, 0.5])\n",
+    "tol = 1e-6\n",
+    "n = inf\n",
+    "\n",
+    "newton_raphson(F, J, X, tol, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Using X instead of x, y, z, ... for math function lambdas\n",
+    "# Use this as input method if there are 4 or more parameters\n",
+    "\n",
     "import numpy as np\n",
     "from math import inf\n",
     "\n",
