Ensure initial vector is all zeros
For Jacobi, Gauss-Seidal and SOR method, initial vector has been set to
0.

Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/system-of-equations.ipynb
+++ b/system-of-equations.ipynb
@@ -60,8 +60,8 @@
     "    n: int\n",
     "        maximum number of iterations\n",
     "    \"\"\"\n",
-    "    X0 = np.array(dim*[0.])\n",
-    "    X1 = np.array(dim*[1.])\n",
+    "    X0 = np.array(dim*[np.inf])\n",
+    "    X1 = np.array(dim*[0.]) # Initial vector\n",
     "\n",
     "    iterations = 0\n",
     "    while np.max(abs(X0 - X1)) > tol and iterations < n:\n",
@@ -70,8 +70,8 @@
     "\n",
     "        for i in range(dim):\n",
     "            for j in range(dim):\n",
-    "                X1[i] += (-A[i][j]*X0[j])\n",
-    "            X1[i] += A[i][i]*X0[i]\n",
+    "                if j != i:\n",
+    "                    X1[i] += (-A[i][j]*X0[j])\n",
     "            X1[i] += B[i]\n",
     "            X1[i] /= A[i][i]\n",
     "        \n",
@@ -95,11 +95,11 @@
     "\n",
     "dim = 3\n",
     "A = np.array([\n",
-    "    [4, 3, 0],\n",
-    "    [3, 4, -1],\n",
-    "    [0, -1, 4]\n",
+    "    [15, 3, -2],\n",
+    "    [2, 10, 1],\n",
+    "    [1, -2, 8]\n",
     "    ], dtype=float)\n",
-    "B = np.array([24, 30, -24], dtype=float)\n",
+    "B = np.array([85, 51, 5], dtype=float)\n",
     "tol = 1e-5\n",
     "n = 100\n",
     "\n",
@@ -136,8 +136,8 @@
     "    n: int\n",
     "        maximum number of iterations\n",
     "    \"\"\"\n",
-    "    X0 = np.array(dim*[0.])\n",
-    "    X1 = np.array(dim*[1.])\n",
+    "    X0 = np.array(dim*[np.inf])\n",
+    "    X1 = np.array(dim*[0.]) # Initial vector\n",
     "\n",
     "    iterations = 0\n",
     "    while np.max(abs(X0 - X1)) > tol and iterations < n:\n",
@@ -149,6 +149,7 @@
     "                X1[i] += (-A[i][j]*X1[j])\n",
     "            for j in range(i+1, dim):\n",
     "                X1[i] += (-A[i][j]*X0[j])\n",
+    "            \n",
     "            X1[i] += B[i]\n",
     "            X1[i] /= A[i][i]\n",
     "        \n",
@@ -172,11 +173,11 @@
     "\n",
     "dim = 3\n",
     "A = np.array([\n",
-    "    [4, 3, 0],\n",
-    "    [3, 4, -1],\n",
-    "    [0, -1, 4]\n",
+    "    [8, 2, -2],\n",
+    "    [1, -8, 3],\n",
+    "    [2, 1, 9]\n",
     "    ], dtype=float)\n",
-    "B = np.array([24, 30, -24], dtype=float)\n",
+    "B = np.array([8, -4, 12], dtype=float)\n",
     "tol = 1e-5\n",
     "n = 100\n",
     "\n",
@@ -215,8 +216,8 @@
     "    n: int\n",
     "        maximum number of iterations\n",
     "    \"\"\"\n",
-    "    X0 = np.array(dim*[0.])\n",
-    "    X1 = np.array(dim*[1.])\n",
+    "    X0 = np.array(dim*[np.inf])\n",
+    "    X1 = np.array(dim*[0.]) # Initial vector\n",
     "\n",
     "    iterations = 0\n",
     "    while np.max(abs(X0 - X1)) > tol and iterations < n:\n",
