Fix typo in code: 'Siedal' to 'Seidal'
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/system-of-equations.ipynb
+++ b/system-of-equations.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gauss-Siedel method"
+    "## Gauss-Seidel method"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def gauss_siedel(dim, A, B, tol, n):\n",
+    "def gauss_seidel(dim, A, B, tol, n):\n",
     "    \"\"\"\n",
     "    Arguments\n",
     "    ---------\n",
@@ -181,7 +181,7 @@
     "tol = 1e-5\n",
     "n = 100\n",
     "\n",
-    "gauss_siedel(dim, A, B, tol, n)"
+    "gauss_seidel(dim, A, B, tol, n)"
    ]
   },
   {
