Add 3 variable case in Newton-Raphson method
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/system-of-equations.ipynb
+++ b/system-of-equations.ipynb
@@ -313,6 +313,9 @@
     "        E = -np.dot(np.linalg.inv(J(X)), F(X))\n",
     "        X = X + E\n",
     "        iterations += 1\n",
+    "        print(X)\n",
+    "\n",
+    "    print(\"iterations:\", iterations)\n",
     "\n",
     "    return X"
    ]
@@ -344,6 +347,48 @@
     "])\n",
     "\n",
     "X = np.array([1.5, 0.5])\n",
+    "tol = 1e-6\n",
+    "n = inf\n",
+    "\n",
+    "newton_raphson(F, J, X, tol, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# For 3 variables, x,y and z\n",
+    "\n",
+    "import numpy as np\n",
+    "from math import inf, sin, cos\n",
+    "\n",
+    "f = lambda x, y, z: 10*x + sin(x+y) - 1\n",
+    "g = lambda x, y, z: 8*y + cos(z-y)**2 - 1\n",
+    "h = lambda x, y, z: 12*z + sin(z) - 1\n",
+    "\n",
+    "F = lambda X: np.array([f(*X), g(*X), h(*X)])\n",
+    "\n",
+    "fx = lambda x, y, z: 10 + cos(x+y)\n",
+    "fy = lambda x, y, z: cos(x+y)\n",
+    "fz = lambda x, y, z: 0\n",
+    "gx = lambda x, y, z: 0\n",
+    "gy = lambda x, y, z: 8 - 2*cos(z-y)*sin(z-y)\n",
+    "gz = lambda x, y, z: 2*cos(z-y)*sin(z-y)\n",
+    "hx = lambda x, y, z: 0\n",
+    "hy = lambda x, y, z: 0\n",
+    "hz = lambda x, y, z: 12 + cos(z)\n",
+    "\n",
+    "J = lambda X: np.array([\n",
+    "    [fx(*X), fy(*X), fz(*X)],\n",
+    "    [gx(*X), gy(*X), gz(*X)],\n",
+    "    [hx(*X), hy(*X), hz(*X)]\n",
+    "])\n",
+    "\n",
+    "X = np.array([1/10, 1/4, 1/12])\n",
     "tol = 1e-6\n",
     "n = inf\n",
     "\n",
