Fix minor error in Newton-Raphson input
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/system-of-equations.ipynb
+++ b/system-of-equations.ipynb
@@ -367,7 +367,7 @@
     "from math import inf, sin, cos\n",
     "\n",
     "f = lambda x, y, z: 10*x + sin(x+y) - 1\n",
-    "g = lambda x, y, z: 8*y + cos(z-y)**2 - 1\n",
+    "g = lambda x, y, z: 8*y - cos(z-y)**2 - 1\n",
     "h = lambda x, y, z: 12*z + sin(z) - 1\n",
     "\n",
     "F = lambda X: np.array([f(*X), g(*X), h(*X)])\n",
