Add Lagrange interpolation
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/interpolation.ipynb
+++ b/interpolation.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -93,7 +93,7 @@
       "text/plain": "0.23830952148437504"
      },
      "metadata": {},
-     "execution_count": 65
+     "execution_count": 2
     }
    ],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -170,7 +170,7 @@
       "text/plain": "0.7831697570560001"
      },
      "metadata": {},
-     "execution_count": 67
+     "execution_count": 4
     }
    ],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
       "text/plain": "351.0"
      },
      "metadata": {},
-     "execution_count": 69
+     "execution_count": 6
     }
    ],
    "source": [
@@ -251,6 +251,78 @@
     "x_pred = 7\n",
     "\n",
     "newton_divided_difference_interpolation(x, y, x_pred)"
+   ]
+  },
+  {
+   "source": [
+    "## Langrange's Interpolation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lagrange_interpolation(x, y, x_pred):\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    x: list\n",
+    "        x values\n",
+    "    y: list\n",
+    "        y value\n",
+    "    x_pred: float\n",
+    "        x value for which y value is being predicted\n",
+    "    \"\"\"\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"x and y shape don't match\")\n",
+    "\n",
+    "    n = len(x)\n",
+    "\n",
+    "    def L(k):\n",
+    "        num = 1\n",
+    "        den = 1\n",
+    "        for i in range(n):\n",
+    "            if i != k:\n",
+    "                num *= (x_pred - x[i])\n",
+    "                den *= (x[k] - x[i])\n",
+    "        return num/den\n",
+    "\n",
+    "    y_pred = 0\n",
+    "    for i in range(0, n):\n",
+    "        y_pred += y[i] * L(i)\n",
+    "    \n",
+    "    return y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2.4785971428571423"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "# Set of distint points\n",
+    "x = [300, 304, 305, 307]\n",
+    "y = [2.4771, 2.4829, 2.4843, 2.4871]\n",
+    "\n",
+    "# Find interpolated value for\n",
+    "x_pred = 301\n",
+    "\n",
+    "lagrange_interpolation(x, y, x_pred)"
    ]
   }
  ]
