Add Hermite interpolation
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/interpolation.ipynb
+++ b/interpolation.ipynb
@@ -262,10 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def L(n, k):\n",
+    "    \"\"\"\n",
+    "    Lagrange Coefficient Polynomial\n",
+    "    \"\"\"\n",
+    "    num = 1\n",
+    "    den = 1\n",
+    "    for i in range(n):\n",
+    "        if i != k:\n",
+    "            num *= (x_pred - x[i])\n",
+    "            den *= (x[k] - x[i])\n",
+    "    return num/den\n",
+    "\n",
     "def lagrange_interpolation(x, y, x_pred):\n",
     "    \"\"\"\n",
     "    Arguments\n",
@@ -281,26 +293,16 @@
     "        raise ValueError(\"x and y shape don't match\")\n",
     "\n",
     "    n = len(x)\n",
-    "\n",
-    "    def L(k):\n",
-    "        num = 1\n",
-    "        den = 1\n",
-    "        for i in range(n):\n",
-    "            if i != k:\n",
-    "                num *= (x_pred - x[i])\n",
-    "                den *= (x[k] - x[i])\n",
-    "        return num/den\n",
-    "\n",
     "    y_pred = 0\n",
     "    for i in range(0, n):\n",
-    "        y_pred += y[i] * L(i)\n",
+    "        y_pred += y[i] * L(n, i)\n",
     "    \n",
     "    return y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -311,7 +313,7 @@
       "text/plain": "2.4785971428571423"
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 19
     }
    ],
    "source": [
@@ -323,6 +325,96 @@
     "x_pred = 301\n",
     "\n",
     "lagrange_interpolation(x, y, x_pred)"
+   ]
+  },
+  {
+   "source": [
+    "## Hermite Interpolation\n",
+    "\n",
+    "Using Newton's divided difference approximation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def double_each_element(l):\n",
+    "    n = len(l)\n",
+    "    l_new = []\n",
+    "    for i in range(n):\n",
+    "        l_new.append(l[i])\n",
+    "        l_new.append(l[i])\n",
+    "    return l_new\n",
+    "\n",
+    "def hermite_interpolation(x, y, y_red, x_pred):\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    x: list\n",
+    "        x values\n",
+    "    y: list\n",
+    "        y value\n",
+    "    y_der: list\n",
+    "        y derivative values\n",
+    "    x_pred: float\n",
+    "        x value for which y value is being predicted\n",
+    "    \"\"\"\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"x and y shape don't match\")\n",
+    "\n",
+    "    z = double_each_element(x)\n",
+    "    n = len(z)\n",
+    "\n",
+    "    # Maintaining a column of divided difference table\n",
+    "    # [Move ahead in the table in each iteration]\n",
+    "    dd_col = double_each_element(y)\n",
+    "    for j in range(0, n-1):\n",
+    "        if j%2 == 0:\n",
+    "            dd_col[j] = y_der[j//2]\n",
+    "        else:\n",
+    "            dd_col[j] = (dd_col[j+1] - dd_col[j])/(z[j+1] - z[j])\n",
+    "\n",
+    "    z_coef = (x_pred - z[0])\n",
+    "    y_pred = y[0]\n",
+    "    for i in range(1, n):\n",
+    "        y_pred += z_coef * dd_col[0]\n",
+    "        z_coef *= (x_pred - z[i])\n",
+    "        for j in range(0, n-i-1):\n",
+    "            dd_col[j] = (dd_col[j+1] - dd_col[j])/(z[j+i+1] - z[j])\n",
+    "    \n",
+    "    return y_pred\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.5118276938271605"
+     },
+     "metadata": {},
+     "execution_count": 52
+    }
+   ],
+   "source": [
+    "# Set of distint points\n",
+    "x = [1.3, 1.6, 1.9]\n",
+    "y = [0.6200860, 0.4554022, 0.2818186]\n",
+    "y_der = [-0.5220232, -0.5698958, -0.5811571]\n",
+    "\n",
+    "# Find interpolated value for\n",
+    "x_pred = 1.5\n",
+    "\n",
+    "hermite_interpolation(x, y, y_der, x_pred)"
    ]
   }
  ]
