Add Curve Fitting
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/interpolation.ipynb
+++ b/interpolation.ipynb
@@ -416,6 +416,109 @@
     "\n",
     "hermite_interpolation(x, y, y_der, x_pred)"
    ]
+  },
+  {
+   "source": [
+    "## Curve fitting using Principal of Least Squares"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def curve_fit(x, y, deg=1):\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    x: numpy.array\n",
+    "        x values\n",
+    "    y: numpy.array\n",
+    "        y value\n",
+    "    deg: int\n",
+    "        Degree of interpolated polynomial\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    np.array:\n",
+    "        Returns coefficients of polynomial\n",
+    "        [Starting from highest degree]\n",
+    "    \"\"\"\n",
+    "    n = deg+1\n",
+    "    X = np.zeros((n, n))\n",
+    "    Y = np.zeros(n)\n",
+    "\n",
+    "    # Initialize X\n",
+    "    for i in range(0, n):\n",
+    "        for j in range(0, n):\n",
+    "            X[i][j] = np.sum(x**(i+j))\n",
+    "    \n",
+    "    # Initialize Y\n",
+    "    for i in range(0, n):\n",
+    "        Y[i] = np.sum(y*x**(i))\n",
+    "\n",
+    "    A =  np.linalg.solve(X, Y)\n",
+    "\n",
+    "    return np.flip(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([0.84365714, 0.86418286, 1.00513714])"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "# Degree 2\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([0, 0.25, 0.5, 0.75, 1.0])\n",
+    "y = np.array([1.0000, 1.2840, 1.6487, 2.1170, 2.7183])\n",
+    "deg = 2\n",
+    "\n",
+    "curve_fit(x, y, deg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([ 1.53818182, -0.36      ])"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "# Degree 1 - linear\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "y = np.array([1.3, 3.5, 4.2, 5.0, 7.0, 8.8, 10.1, 12.5, 13.0, 15.6])\n",
+    "\n",
+    "curve_fit(x, y)"
+   ]
   }
  ]
 }
